<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="appName"
            type="String" />
        <variable
            name="storeName"
            type="String" />
        <variable
            name="rating"
            type="Float" />
        <variable
            name="downloads"
            type="String" />
        <variable
            name="size"
            type="String" />
        <variable
            name="versionName"
            type="String" />
        <variable
            name="updatedAt"
            type="String" />
        <variable
            name="packageName"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".appdetails.AppDetailsFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftguideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightguideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <ImageView
            android:id="@+id/AppIcon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="@+id/leftguideline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.15"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/appNameTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@{appName}"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toStartOf="@+id/rightguideline"
            app:layout_constraintStart_toEndOf="@+id/AppIcon"
            app:layout_constraintTop_toTopOf="@+id/AppIcon"
            tools:text="App Name" />

        <TextView
            android:id="@+id/storeNameTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@{storeName}"
            android:textColor="@color/orange_700"
            app:layout_constraintEnd_toEndOf="@+id/appNameTxt"
            app:layout_constraintStart_toStartOf="@+id/appNameTxt"
            app:layout_constraintTop_toBottomOf="@+id/appNameTxt"
            tools:ignore="TextContrastCheck"
            tools:text="Store Name" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintEnd_toStartOf="@+id/rightguideline"
            app:layout_constraintStart_toStartOf="@+id/leftguideline"
            app:layout_constraintTop_toBottomOf="@id/barrier2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fragment_app_details_rating_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(rating)}"
                    app:drawableEndCompat="@drawable/ic_star_small"
                    tools:text="4.7"
                    style="@style/value_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_app_details_rating"
                    tools:text="Rating" />

            </LinearLayout>

            <View style="@style/separator_small" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fragment_app_details_downloads_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{downloads}"
                    style="@style/value_text"
                    tools:text="Over 1 M" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_app_details_downloads"
                    tools:text="Downloads" />

            </LinearLayout>


            <View style="@style/separator_small" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fragment_app_details_size_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{size}"
                    style="@style/value_text"
                    tools:text="Over 1 M" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_add_details_size"
                    tools:text="Size" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/fragment_app_details_version"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintStart_toStartOf="@+id/leftguideline"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

        <TextView
            android:id="@+id/fragment_app_details_version_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{versionName}"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toStartOf="@+id/rightguideline"
            app:layout_constraintTop_toTopOf="@+id/textView4"
            tools:text="3.4.7" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/fragment_app_details_updated_at"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintStart_toStartOf="@+id/leftguideline"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/fragment_app_details_updated_at_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{updatedAt}"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintEnd_toEndOf="@+id/fragment_app_details_version_txt"
            app:layout_constraintTop_toTopOf="@+id/textView5"
            tools:text="2022-03-23" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/fragment_app_details_package"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintStart_toStartOf="@+id/leftguideline"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/fragment_app_details_package"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{packageName}"
            android:textAlignment="textEnd"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintEnd_toStartOf="@+id/rightguideline"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView6"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.5"
            tools:text="devian.tubemate.v3" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="storeNameTxt,AppIcon" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>